--- a/main/src/Components/Home.css
+++ b/main/src/Components/Home.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 70vh;
+  /* height: 70vh; */
   width: 50vw;
   margin: auto;
   margin-top: 5rem;
@@ -46,7 +46,6 @@
 }
 .lists {
   margin-top: 1.5rem;
-  overflow-y: scroll;
 }
 .listContainer {
   display: flex;
